добавлена работа с gRPC и взаимодействие с микросервисом новостей
